Events at the forum on their own row on small sizes. Fixes #66

--- a/app/assets/stylesheets/base/responsive.css.scss
+++ b/app/assets/stylesheets/base/responsive.css.scss
@@ -86,9 +86,7 @@ $mediaSmallPortrait: 320px;
 		.events-forum {
 			border: none !important;
 			padding-left: 0 !important;
-			.mq-row-fluid {
-				@include makeFluidRow;
-			}
+			.event > .row-fluid { @include makeFluidRow; }
 		}
 	}
 	
